/*
 * Copyright (c) 2020 Toast Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.toasttab.protokt.testing.options;

import "protokt/protokt.proto";

message PrimitiveWrappedTypes {
  bytes bytes = 1 [
    (.protokt.property).wrap = "ByteArrayBox"
  ];

  bool bool = 2 [
    (.protokt.property).wrap = "BoolBox"
  ];

  double double = 3 [
    (.protokt.property).wrap = "DoubleBox"
  ];

  fixed32 fixed32 = 4 [
    (.protokt.property).wrap = "IntBox"
  ];

  fixed64 fixed64 = 5 [
    (.protokt.property).wrap = "LongBox"
  ];

  float float = 6 [
    (.protokt.property).wrap = "FloatBox"
  ];

  int32 int32 = 7 [
    (.protokt.property).wrap = "IntBox"
  ];

  int64 int64 = 8 [
    (.protokt.property).wrap = "LongBox"
  ];

  sfixed32 sfixed32 = 9 [
    (.protokt.property).wrap = "IntBox"
  ];

  sfixed64 sfixed64 = 10 [
    (.protokt.property).wrap = "LongBox"
  ];

  sint32 sint32 = 11 [
    (.protokt.property).wrap = "IntBox"
  ];

  sint64 sint64 = 12 [
    (.protokt.property).wrap = "LongBox"
  ];

  string string = 13 [
    (.protokt.property).wrap = "StringBox"
  ];

  uint32 uint32 = 14 [
    (.protokt.property).wrap = "IntBox"
  ];

  uint64 uint64 = 15 [
    (.protokt.property).wrap = "LongBox"
  ];
}
